--- a/soh_log/Cargo.toml
+++ b/soh_log/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "soh_log"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dependencies]
-anyhow = "1.0"
+anyhow = { workspace = true }
+
+[lints]
+workspace = true
