--- a/soh_rng/Cargo.toml
+++ b/soh_rng/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "soh_rng"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 [dev-dependencies]
-clap = { version = "4.5.19", features = [ "derive" ] }
+clap = { workspace = true }
+
+[lints]
+workspace = true
