--- a/soh_thread/Cargo.toml
+++ b/soh_thread/Cargo.toml
@@ -4,6 +4,11 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+anyhow = { workspace = true }
+soh_log = { workspace = true, optional = true }
+
+[features]
+log = [ "dep:soh_log" ]
 
 [lints]
 workspace = true
