--- a/soh_vk/Cargo.toml
+++ b/soh_vk/Cargo.toml
@@ -4,9 +4,14 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+soh_log = { workspace = true, optional = true }
+anyhow = { workspace = true }
 ash = { workspace = true }
 sdl2 = { workspace = true }
-anyhow = { workspace = true }
+shaderc = { version = "<1.0", features = [ "build-from-source" ] }
+
+[features]
+log = [ "dep:soh_log" ]
 
 [lints]
 workspace = true
