--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,15 @@ edition = "2021"
 soh_rng = { workspace = true, optional = true }
 soh_log = { workspace = true, optional = true }
 soh_vk = { workspace = true, optional = true }
+soh_ui = { workspace = true, optional = true }
 soh_thread = { workspace = true, optional = true }
 
 [features]
 default = [ ]
 rng = [ "dep:soh_rng" ]
-log = [ "dep:soh_log", "soh_vk?/log", "soh_thread?/log" ]
+log = [ "dep:soh_log", "soh_vk?/log", "soh_ui?/log", "soh_thread?/log" ]
 vk = [ "dep:soh_vk" ]
+ui = [ "dep:soh_ui", "vk" ]
 thread = [ "dep:soh_thread" ]
 
 #==============================================================================
@@ -25,6 +27,7 @@ members = [
     "soh_rng",
     "soh_log",
     "soh_vk" ,
+    "soh_ui",
     "soh_thread"
 ]
 
@@ -37,6 +40,7 @@ edition = "2021"
 soh_rng = { path = "./soh_rng" }
 soh_log = { path = "./soh_log" }
 soh_vk = { path = "./soh_vk" }
+soh_ui = { path = "./soh_ui" }
 soh_thread = { path = "./soh_thread" }
 
 # Other libs
