--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+soh_math = { workspace = true, optional = true }
 soh_rng = { workspace = true, optional = true }
 soh_log = { workspace = true, optional = true }
 soh_vk = { workspace = true, optional = true }
@@ -14,9 +15,10 @@ soh_thread = { workspace = true, optional = true }
 
 [features]
 default = [ ]
+math = [ "dep:soh_math" ]
 rng = [ "dep:soh_rng" ]
 log = [ "dep:soh_log", "soh_vk?/log", "soh_ui?/log", "soh_thread?/log" ]
-vk = [ "dep:soh_vk" ]
+vk = [ "dep:soh_vk", "math" ]
 ui = [ "dep:soh_ui", "vk" ]
 thread = [ "dep:soh_thread" ]
 
@@ -24,6 +26,7 @@ thread = [ "dep:soh_thread" ]
 # Workspace config
 [workspace]
 members = [
+    "soh_math",
     "soh_rng",
     "soh_log",
     "soh_vk" ,
@@ -37,6 +40,7 @@ edition = "2021"
 
 [workspace.dependencies]
 # My libs
+soh_math = { path = "./soh_math" }
 soh_rng = { path = "./soh_rng" }
 soh_log = { path = "./soh_log" }
 soh_vk = { path = "./soh_vk" }
