--- a/soh_math/Cargo.toml
+++ b/soh_math/Cargo.toml
@@ -8,6 +8,9 @@ macros = { path = "./macros" }
 serde = { workspace = true, optional = true }
 num-traits = { workspace = true }
 
+[dev-dependencies]
+soh_rng = { workspace = true }
+
 [features]
 serde = [ "dep:serde" ]
 
