--- a/soh_vk/Cargo.toml
+++ b/soh_vk/Cargo.toml
@@ -4,7 +4,9 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+soh_vk_derive = { path = "./soh_vk_derive" }
 soh_log = { workspace = true, optional = true }
+soh_math = { workspace = true }
 anyhow = { workspace = true }
 ash = { workspace = true }
 sdl2 = { workspace = true }
