soh_vk: add `VulkanContext` struct
This commit adds vulkan context structure and functions which make it
easy to bootstrap creation of vulkan objects.

This commit also has following changes:
1. Refactors of how framebuffers are made ( now a framebuffer object has
   just a single handle instead of an array )
2. Now extension information is queries for GPUs
3 `soh_log` is no longer an optional thing.

--- a/soh_vk/Cargo.toml
+++ b/soh_vk/Cargo.toml
@@ -5,15 +5,12 @@ edition.workspace = true
 
 [dependencies]
 soh_vk_derive = { path = "./soh_vk_derive" }
-soh_log = { workspace = true, optional = true }
+soh_log = { workspace = true }
 soh_math = { workspace = true }
 anyhow = { workspace = true }
 ash = { workspace = true }
 sdl2 = { workspace = true }
 shaderc = { version = "<1.0", features = [ "build-from-source" ] }
-
-[features]
-log = [ "dep:soh_log" ]
 
 [lints]
 workspace = true
