--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ all = [ "math", "rng", "log", "vk", "ui", "thread" ]
 
 math = [ "dep:soh_math" ]
 rng = [ "dep:soh_rng" ]
-log = [ "dep:soh_log", "soh_vk?/log", "soh_ui?/log", "soh_thread?/log" ]
+log = [ "dep:soh_log", "soh_thread?/log" ]
 vk = [ "dep:soh_vk", "math" ]
 ui = [ "dep:soh_ui", "vk" ]
 thread = [ "dep:soh_thread" ]
