--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ ui = [ "dep:soh_ui", "vk" ]
 thread = [ "dep:soh_thread" ]
 
 serde = [ "soh_math?/serde" ]
+f128 = [ "soh_math?/f128" ]
 
 #==============================================================================
 # Workspace config
@@ -56,6 +57,7 @@ anyhow = ">=1.0,<2.0"
 clap = { version = ">=4.0,<5.0", features = [ "derive" ] }
 serde = { version = ">=1.0,<2.0", features = [ "derive" ] }
 num-traits = "<1.0"
+f128_num = { package = "f128", version = "0.2.9" }
 
 ash = "<1.0"
 winit = "0.30"
