--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,15 +57,15 @@ soh_thread = { path = "./soh_thread" }
 soh_game = { path = "./soh_game" }
 
 # Other libs
-anyhow = ">=1.0,<2.0"
-clap = { version = ">=4.0,<5.0", features = [ "derive" ] }
-serde = { version = ">=1.0,<2.0", features = [ "derive" ] }
-num-traits = "<1.0"
-f128_num = { package = "f128", version = "0.2.9" }
+anyhow = "1.0"
+clap = { version = "4.0", features = [ "derive" ] }
+serde = { version = "1.0", features = [ "derive" ] }
+num-traits = "0.2"
+f128_num = { package = "f128", version = "0.2" }
 
-ash = "<1.0"
+ash = "0.38"
 winit = "0.30"
-ron = "<1.0"
+ron = "0.8"
 
 # Macro libs
 syn = { version = "2.0", features = [ "full" ] }
